# hourei-api

./: README.md  app.db  config.py  db.py  main.py  models.py  pyproject.toml
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/services/: calculator.py
backend/tests/: test_main.py
routers/: auth.py  photos.py
schemas/: auth.py  item.py
services/: auth.py  external_api.py  storage.py
tests/: test_auth_photos.py  test_main.py
